# openrc-settingsd

./: .gitignore  Makefile.am  README  configure.ac  meson.build  meson_options.txt
data/: openrc-settingsd.8  org.freedesktop.hostname1.xml
src/: hostnamed.c  main.c  timedated.c  utils.c
src/copypaste/: util.c
